--- a/index.css
+++ b/index.css
@@ -1,31 +1,83 @@
 :root {
   --font-main: "Space Mono", monospace;
   --font-secondary: "Inconsolata", monospace;
+  --font-sans: "Montserrat", sans-serif;
   --fs-300: 0.875rem;
   --fs-400: 1rem;
   --fs-500: 1.125rem;
   --fs-600: 1.5rem;
   --fs-700: 3rem;
+  --clr-gray-1: 0 0% 20%;
+  --clr-gray-2: 0 0% 31%;
+  --clr-gray-3: 0 0% 74%;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
+  color: hsl(var(--clr-gray-1));
   font-family: var(--font-main);
   font-weight: 400;
+  font-size: 16px;
+  letter-spacing: -0.035em;
 }
 
-.title {
-  font-family: var(--font-secondary);
+header {
   font-weight: bold;
   text-transform: uppercase;
+  line-height: 25px;
+  letter-spacing: -0.08em;
+  font-size: var(--fs-600);
 }
 
 img {
-  width: 100%;
+  width: 60%;
   display: block;
+  margin: 0 auto;
+}
+
+button {
+  font: inherit;
+  text-transform: uppercase;
+  color: white;
+  background-color: hsl(var(--clr-gray-1));
+  font-size: var(--fs-300);
+  padding: 1.5em 3.125em;
+}
+
+.container {
+  margin: 1.5em;
+  margin-top: 1.25em;
+}
+
+.container > *:where(:not(:first-child)) {
+  margin-top: 3.75rem;
+}
+
+.title {
+  font-size: var(--fs-700);
+  font-weight: 700;
+  line-height: 71px;
+}
+
+p {
+  font-size: var(--fs-500);
+  color: hsl(var(--clr-gray-2));
+  line-height: 27px;
+}
+
+footer {
+  color: hsl(var(--clr-gray-3));
+  font-family: var(--font-sans);
+  font-size: var(--fs-300);
+}
+
+.strong {
+  text-decoration: underline;
+  font-weight: bold;
 }
