--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ header {
 }
 
 img {
-  width: 60%;
+  width: 80%;
   display: block;
   margin: 0 auto;
 }
@@ -48,15 +48,18 @@ button {
   background-color: hsl(var(--clr-gray-1));
   font-size: var(--fs-300);
   padding: 1.5em 3.125em;
+  cursor: pointer;
+  border: 0;
 }
 
 .container {
   margin: 1.5em;
   margin-top: 1.25em;
+  min-height: calc(100vh - 2.75em);
 }
 
-.container > *:where(:not(:first-child)) {
-  margin-top: 3.75rem;
+.flow > *:where(:not(:first-child)) {
+  margin-top: var(--flow, 1rem);
 }
 
 .title {
@@ -72,6 +75,7 @@ p {
 }
 
 footer {
+  text-align: center;
   color: hsl(var(--clr-gray-3));
   font-family: var(--font-sans);
   font-size: var(--fs-300);
@@ -80,4 +84,31 @@ footer {
 .strong {
   text-decoration: underline;
   font-weight: bold;
+}
+
+@media only screen and (min-width: 996px) {
+  :root {
+    --fs-700: 4rem;
+    --fs-500: 1.5rem;
+  }
+
+  body {
+    padding-inline: 2rem;
+  }
+
+  .m-flex {
+    display: flex;
+    align-items: center;
+  }
+
+  .push {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  p {
+    max-width: 22.5rem;
+  }
 }
