--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ body {
 }
 
 header {
+  font-family: var(--font-secondary);
   font-weight: bold;
   text-transform: uppercase;
   line-height: 25px;
@@ -86,7 +87,7 @@ footer {
   font-weight: bold;
 }
 
-@media only screen and (min-width: 996px) {
+@media only screen and (min-width: 992px) {
   :root {
     --fs-700: 4rem;
     --fs-500: 1.5rem;
